--- a/styles.css
+++ b/styles.css
@@ -31,21 +31,44 @@ span
 	font-weight:normal;
 	margin: 0;
 }
+textarea
+{
+	overflow: auto;
+	resize: none;
+	background: #f6f6f6;
+	border: 1px solid #cecece;
+}
+select
+{
+	display: block;
+	border-radius: 3px;
+	border: 1px solid #cecece;
+	background-color: #F6F6f6;
+	padding: 1px 1px 1px 3px;
+	color: #444;
+	height: 25px;
+}
+input[type=button]
+{
+	padding: 3px 3px 3px 3px;
+	background: #c0c0c0;
+	border: 1px solid #cecece;
+}
+
 
 #TT
 {
     float: left;
-    font-size: 14px;
+    font-size: 20px;
 	line-height: 10px;
 }
 #exp
 {
 	top: 12px;
     line-height: 15px;
-    font-size: 14;    
+    font-size: 15;    
     width: 15px;
     height: 245px;
-    resize: none;
     float: left;
 }
 #TruthTable
@@ -57,6 +80,7 @@ span
     border: none;
     resize: none;
     float: left;
+	background: #fff;
 }
 .data
 {
@@ -65,9 +89,8 @@ span
 }
 #ret
 {
-    width: 920px;
-    height: 90%;
-    resize: none;
+    width: 100%;
+    height: 93%;
 }
 #interface
 {
