--- a/styles.css
+++ b/styles.css
@@ -41,18 +41,104 @@ textarea
 select
 {
 	display: block;
-	border-radius: 3px;
 	border: 1px solid #cecece;
 	background-color: #F6F6f6;
 	padding: 1px 1px 1px 3px;
 	color: #444;
 	height: 25px;
+	text-align:center;
+	width:150px;
 }
 input[type=button]
 {
-	padding: 3px 3px 3px 3px;
-	background: #c0c0c0;
+	margin-top: 5px;
+	margin-bottom: 10px;
+	background-color: #f6f6f6;
 	border: 1px solid #cecece;
+    box-shadow: 0 1px 1px rgba(0, 0, 0, 0.075) inset;
+    font-size: 14px;
+    text-align:center;
+	width: 150px;
+    height: 25px;
+}
+
+label {
+    display: inline-block;
+    cursor: pointer;
+    position: relative;
+    padding-left: 25px;
+    margin-right: 15px;
+    font-size: 13px;
+}
+input[type=radio] {
+    display: none;
+}
+label:before {
+    content: "";
+    display: inline-block;
+ 
+    width: 16px;
+    height: 16px;
+ 
+    margin-right: 10px;
+    position: absolute;
+    left: 0;
+    bottom: 1px;
+    background-color: #c0c0c0;
+}
+.radio label:before {
+    border-radius: 8px;
+}
+input[type=radio]:checked + label:before {
+    content: "\2022";
+    color: #f6f6f6;
+    font-size: 20px;
+    text-align: center;
+    line-height: 14px;
+}
+
+input[type=checkbox] {
+    display: none;
+}
+.group label:before {
+    content: "";
+    display: inline-block;
+ 
+    width: 16px;
+    height: 16px;
+ 
+    margin-right: 10px;
+    position: absolute;
+    left: 0;
+    bottom: 1px;
+    background-color: #c0c0c0;
+}
+.group label:before {
+    border-radius: 8px;
+}
+input[type=checkbox]:checked + label:before {
+    content: "\2713";
+    color: #f6f6f6;
+    font-size: 16px;
+    text-align: center;
+    line-height: 15px;
+}
+
+
+
+
+
+input[type=button]:hover, input[type=button]:focus
+{
+   border-color: rgba(82, 168, 236, 0.8);
+   box-shadow: 0 1px 1px rgba(0, 0, 0, 0.075) inset, 0 0 8px rgba(82, 168, 236, 0.6);
+   outline: 0 none;
+}
+select:hover, select:focus
+{
+   border-color: rgba(82, 168, 236, 0.8);
+   box-shadow: 0 1px 1px rgba(0, 0, 0, 0.075) inset, 0 0 8px rgba(82, 168, 236, 0.6);
+   outline: 0 none;
 }
 
 
