--- a/styles.css
+++ b/styles.css
@@ -77,8 +77,8 @@ label:before {
     content: "";
     display: inline-block;
  
-    width: 16px;
-    height: 16px;
+    width: 14px;
+    height: 14px;
  
     margin-right: 10px;
     position: absolute;
@@ -87,14 +87,14 @@ label:before {
     background-color: #c0c0c0;
 }
 .radio label:before {
-    border-radius: 8px;
+    border-radius: 7px;
 }
 input[type=radio]:checked + label:before {
     content: "\2022";
     color: #f6f6f6;
-    font-size: 20px;
+    font-size: 18px;
     text-align: center;
-    line-height: 14px;
+    line-height: 13px;
 }
 
 input[type=checkbox] {
@@ -124,10 +124,6 @@ input[type=checkbox]:checked + label:before {
     line-height: 15px;
 }
 
-
-
-
-
 input[type=button]:hover, input[type=button]:focus
 {
    border-color: rgba(82, 168, 236, 0.8);
@@ -141,6 +137,35 @@ select:hover, select:focus
    outline: 0 none;
 }
 
+input[type=range]
+{
+	width: 90%;
+	-webkit-appearance:none;
+	margin: 9px 0;
+}
+input[type=range]::-webkit-slider-runnable-track
+{
+	width: 100%;
+	height: 7px;
+	cursor: pointer;
+	background: #c0c0c0;
+	color: #f6f6f6;
+	border-radius: 0px;
+	background-color: #f6f6f6;
+	border: 1px solid #cecece;
+
+}
+input[type=range]::-webkit-slider-thumb
+{
+	border: 1px solid #a0a0a0;
+	height: 22px;
+	width: 6px;
+	border-radius: 11px;
+	background: white;
+	cursor: pointer;
+	-webkit-appearance: none;
+	margin-top: -8.5px;
+}
 
 #TT
 {
@@ -156,6 +181,7 @@ select:hover, select:focus
     width: 15px;
     height: 245px;
     float: left;
+	overflow: hidden;
 }
 #TruthTable
 {
@@ -167,6 +193,7 @@ select:hover, select:focus
     resize: none;
     float: left;
 	background: #fff;
+	overflow: hidden;
 }
 .data
 {
@@ -216,7 +243,7 @@ select:hover, select:focus
     width: 370px;
     height: 30px;
 	margin-bottom:20px;
-	margin: 0 auto;
+	margin: auto;
 }
 #container
 {
