--- a/styles.css
+++ b/styles.css
@@ -160,7 +160,7 @@ input[type=range]::-webkit-slider-thumb
 	border: 1px solid #a0a0a0;
 	height: 22px;
 	width: 6px;
-	border-radius: 11px;
+	border-radius: 0px;
 	background: white;
 	cursor: pointer;
 	-webkit-appearance: none;
@@ -230,7 +230,7 @@ input[type=range]::-webkit-slider-thumb
 #output
 {
     width: 990px;
-    height: 300px;
+	height: auto;
     float: left;
     margin: 5px;
     margin-top:15px;
@@ -265,4 +265,16 @@ input[type=range]::-webkit-slider-thumb
 	font-size: 12px;
 	text-align: left;
 	margin:0;
+}
+#OutputData
+{
+	width: 100%;
+	height: 100%;
+	margin: 0;
+}
+#VarRow
+{
+	background: #CECECE;
+	margin:10px;
+	padding: 10px;
 }
