--- a/styles.css
+++ b/styles.css
@@ -66,7 +66,7 @@ td
 	height: 64px;
 	width: 64px;
 	text-indent: -9999px;
-    background: url('logo.png') top no-repeat;
+    background: url('img/logo.png') top no-repeat;
 }
 
 #header
